# mmsg

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
mmsg/: __init__.py  utils.py
mmsg/fsm/: guide.py  json_schema.py  regex.py
mmsg/integrations/: __init__.py  chameleon_logits_processor.py  chameleon_utils.py  multimodal_tokenizer.py
scripts/: image_only_generation.py  interleaved_generation.py  modal_commons.py  modal_convert_chameleon_weights.py  modal_inference.py  modal_requirements.txt  structured_generation.py  text_only_generation.py
